--- a/public/views/monitoring.html
+++ b/public/views/monitoring.html
@@ -1,5 +1,35 @@
 <div class="jumbotron text-center">
 	<h1>Monitoring Page</h1>
 	
-	<p>{{ message }}</p>
+	<div id="piechart" style="width: 100%; height: 300px;"></div>
+
+	<table style="margin: 50px auto; text-align: center;" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+	  <thead>
+	    <tr>
+	      <th style="width:200px;"><h4>Needs</h4></th>
+	      <th style="width:200px;"><h4>Number of Reports</h4></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr>
+	      	<td class="mdl-data-table__cell">FOOD</td>
+ 			<td class="mdl-data-table__cell">600</td>
+   		
+	    </tr>
+	     <tr>
+	      	<td class="mdl-data-table__cell">WATER</td>
+ 			<td class="mdl-data-table__cell">333</td>
+   			
+	    </tr>
+	     <tr>
+	      	<td class="mdl-data-table__cell">MEDICINE</td>
+ 			<td class="mdl-data-table__cell">200</td>
+   	
+	    </tr>
+	     <tr>
+ 			<td class="mdl-data-table__cell">OTHERS</td>
+   			<td class="mdl-data-table__cell">1543</td>
+	    </tr>
+	  </tbody>
+	</table>
 </div>
