--- a/public/views/map.html
+++ b/public/views/map.html
@@ -1,5 +1,6 @@
 <div class="jumbotron text-center">
 	<h1>Map Page</h1>
 	
-	<p>{{ message }}</p>
+	<!-- <div id="map" style="width:100%;height: 500px;"></div> -->
+	  <div style="height: 420px; width: 100%;" id="map"></div>
 </div>
